Web: Fix page width overflow

--- a/web/app/src/assets/base.css
+++ b/web/app/src/assets/base.css
@@ -48,7 +48,6 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  width: 100vw;
 }
 
 #app {
